# foobar2000-tag-lookup

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
scripts/: package_chromecast_component.sh  package_component.sh
specs/: album_art_requirements.md  build_requirements.md  tag_lookup_requirements.md  tag_propagation_requirements.md  testing_requirements.md
src/: album_art_selector.h  album_art_selector_mac.mm  album_art_service.cpp  album_art_service.h  chromecast_component.mm  component_main.cpp  match_selector.h  match_selector_mac.mm  search_input.h  search_input_mac.mm  tag_lookup_service.cpp  tag_lookup_service.h
tests/: album_art_service_tests.cpp  tag_lookup_service_tests.cpp
